# my_pvp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dockerfile  run_game.sh
qml/: EnergyBar.qml  GameScreen.qml  GameUI.qml  HealthBar.qml  Main.qml  MenuScreen.qml  PlayerCharacter.qml  TransitionScreen.qml  qml.qrc
src/: main.cpp
src/controllers/: CollisionController.cpp  CollisionController.h  GameController.cpp  GameController.h  InputController.cpp  InputController.h  PhysicsController.cpp  PhysicsController.h
src/models/: FighterModel.cpp  FighterModel.h  GameModel.cpp  GameModel.h  PlayerModel.cpp  PlayerModel.h
src/utils/: GameEngine.cpp  GameEngine.h  ResourceManager.cpp  ResourceManager.h  SoundManager.cpp  SoundManager.h  SpriteProvider.cpp  SpriteProvider.h
src/viewmodels/: FighterViewModel.cpp  FighterViewModel.h  GameViewModel.cpp  GameViewModel.h  PlayerViewModel.cpp  PlayerViewModel.h
